# Reduce

./: CMakeLists.txt  main.cpp  r.cpp  r.h  reducedsum.cpp  reducedsum.h  stringnumber.cpp  stringnumber.h
test/: CMakeLists.txt  reducedSumTest.cpp  stringnumbertest.cpp
